--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -36,17 +36,22 @@
                 </div>
             </div>
         </div>
-        <app-item-info class="w-full" [item]="currencyItem" />
+        @if (currencyItem) {
+            <app-item-info class="w-full" [item]="currencyItem" />
+        }
+        <app-item-info-skeleton class="w-full z-[2] {{ currencyItem ? 'hidden' : 'block' }}" />
+        
+
         <div class="w-full flex justify-end flex-col md:flex-row md:justify-between items-center md:mb-7">
             <div class="flex flex-col md:flex-row items-end w-full md:w-auto mb-2 md:mb-0">
                 <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
                     <p class="text-right text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%]">کمترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
                     <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] block md:hidden">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'hidden md:block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
                     <div class="items-center gap-1.25 {{ currencyItem ? 'hidden md:flex' : 'hidden'}}">
-                        <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
+                        <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'inline-block' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
                         <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
                     </div>
+                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] hidden {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
                 </div>
                 <div class="w-full md:w-50 h-2 md:mx-2 rounded-2xl bg-light-border2 dark:bg-dark-border2 mb-2">
                     <div [style.width]="currentPercentMinMax()" class="h-full flex justify-start bg-light-text2 dark:bg-dark-text2 rounded-2xl">
@@ -57,13 +62,13 @@
                     <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] hidden md:block">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
                     <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }} md:hidden">Some data</span>
                     <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
-                    <div class="items-center gap-1.25 {{ currencyItem ? 'flex' : 'hidden' }} md:hidden">
+                    <div class="items-center gap-1.25 {{ currencyItem ? 'flex' : 'hidden'}} md:hidden">
                         <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
-                        <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
+                        <p class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] dark:text-white text-dark">{{ currentMinPrice() }}</p>
                     </div>
-                    <div class="{{ currencyItem ? 'flex' : 'hidden' }} items-center gap-1.25">
+                    <div class="items-center gap-1.25 {{ currencyItem ? 'hidden md:flex' : 'hidden'}}">
                         <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
-                        <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMaxPrice() }}</p>
+                        <p class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] dark:text-white text-dark">{{ currentMaxPrice() }}</p>
                     </div>
                 </div>
             </div>
