--- a/src/app/pages/currency-item-details/currency-item-details.component.html
+++ b/src/app/pages/currency-item-details/currency-item-details.component.html
@@ -43,35 +43,20 @@
         
 
         <div class="w-full flex justify-end flex-col md:flex-row md:justify-between items-center md:mb-7">
-            <div class="flex flex-col md:flex-row items-end w-full md:w-auto mb-2 md:mb-0">
-                <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
-                    <p class="text-right text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%]">کمترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] block md:hidden">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <div class="items-center gap-1.25 {{ currencyItem ? 'hidden md:flex' : 'hidden'}}">
-                        <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'inline-block' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
-                        <p class="dark:text-white text-dark text-sm md:text-xs lg:text-sm font-normal leading-[180%]">{{ currentMinPrice() }}</p>
-                    </div>
-                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] hidden {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
-                </div>
-                <div class="w-full md:w-50 h-2 md:mx-2 rounded-2xl bg-light-border2 dark:bg-dark-border2 mb-2">
-                    <div [style.width]="currentPercentMinMax()" class="h-full flex justify-start bg-light-text2 dark:bg-dark-text2 rounded-2xl">
-                        
-                    </div>
-                </div>
-                <div class="flex md:flex-col flex-row justify-between md:justify-start w-full md:w-auto mb-2 md:mb-0">
-                    <p class="text-xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] hidden md:block">بیشترین {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'نسبت' : 'قیمت' }}</p>
-                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }} md:hidden">Some data</span>
-                    <span class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] {{ currencyItem ? 'hidden' : 'block text-transparent animate-pulse bg-light-border dark:bg-dark-border rounded-lg' }}">Some data</span>
-                    <div class="items-center gap-1.25 {{ currencyItem ? 'flex' : 'hidden'}} md:hidden">
-                        <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
-                        <p class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] dark:text-white text-dark">{{ currentMinPrice() }}</p>
-                    </div>
-                    <div class="items-center gap-1.25 {{ currencyItem ? 'hidden md:flex' : 'hidden'}}">
-                        <p class="text-2xs font-normal text-dark-text4 dark:text-light-text4 leading-[180%] {{ currencyItem?.faGroupName === 'بازارهای ارزی' ? 'hidden' : 'flex' }}">{{ currentSupportCurrencyId() === 0 ? 'تومان' : 'دلار' }}</p>
-                        <p class="text-sm md:text-xs lg:text-sm font-normal leading-[180%] dark:text-white text-dark">{{ currentMaxPrice() }}</p>
-                    </div>
-                </div>
-            </div>
+            
+            @if (currencyItem) {
+                <app-percent-progress
+                class="w-full"
+                [currencyItem]="currencyItem"
+                [currentSupportCurrencyId]="currentSupportCurrencyId()"
+                [currentMinPrice]="currentMinPrice()"
+                [currentMaxPrice]="currentMaxPrice()"
+                [currentPercentMinMax]="currentPercentMinMax()"
+                />
+            }
+            <app-percent-progress-skeleton class="w-full z-[2] {{ currencyItem ? 'hidden' : 'block' }}" />
+
+
             <div class="flex p-0 justify-between md:justify-start mb-4 md:mb-0 md:p-2 md:rounded-lg gap-0 md:gap-4 md:border md:border-light-text4 md:dark:border-dark-text4 my-2 w-full md:w-auto">
                 <div (click)="onChartTypeChange(1)" class="flex hover:cursor-pointer justify-center items-center py-2.5 md:py-0 flex-1/2 gap-2 md:gap-0 md:flex-auto md:border-b-0 border-b {{ currentChartType() === 1 ? 'border-b-green-btn text-green-btn' : 'border-b-dark-text4 text-dark-text4' }} ">
                     <p class="block md:hidden text-sm font-normal duration-300 ease-in-out leading-[180%]">نمودار خطی</p>
