Some bugs fixed

--- a/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
+++ b/src/app/components/not-shared/currency-item-details/changes-table/changes-table.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex flex-col mb-4 md:mb-6 lg:mb-8">
+<div class="w-full flex flex-col mb-4 md:mb-6">
     <p class="leading-[180%] border-b px-[10%] border-b-light-text2 dark:border-b-dark-text2 pb-3 text-right text-sm font-medium lg:text-base text-dark-text4 dark:text-light-text4">تاریخچه قیمت</p>
     
     <table class="w-full leading-[180%] flex flex-col">
