--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="px-4 h-16">
+<footer class="h-16 bg-light2 dark:bg-dark2 w-full border-t border-t-light-border dark:border-t-dark-border mx-auto px-4 lg:px-18 xl:px-41">
 
 </footer>
