Hamburger menu completely added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-mobile-hamberger-menu />
-<app-header ></app-header>
+<app-mobile-hamberger-menu [open]="isMenuOpen" (close)="closeMenu()" />
+<app-header (menuClick)="toggleMenu()"/>
 <app-notification />
 <router-outlet></router-outlet>
 <app-footer></app-footer>
