--- a/src/app/pages/converter/converter.component.html
+++ b/src/app/pages/converter/converter.component.html
@@ -1,3 +1,3 @@
-<main class="min-h-[var(--screen-height)] w-full ">
+<main class="min-h-[var(--screen-height)] w-full bg-theme-white dark:bg-theme-black">
 
 </main>
