--- a/src/app/components/not-shared/home/empty-item/empty-item.component.html
+++ b/src/app/components/not-shared/home/empty-item/empty-item.component.html
@@ -1,7 +1,7 @@
 <div class="min-h-[4.853rem] animate-pulse px-4 sm:px-0 sm:min-h-[5.8rem] relative w-full flex items-center bg-light dark:bg-dark border-b border-b-light-border dark:border-b-dark-border">
     <div class="hidden md:flex w-[20%]">
         <i class="text-xs bi bi-caret-left-fill text-dark-text3 dark:text-light-text3 font-normal opacity-0"></i>
-        <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal">اطلاعات بیشتر</strong>
+        <strong class="text-transparent bg-light-border dark:bg-dark-border rounded-sm animate-pulse font-normal line-clamp-1 text-ellipsis">اطلاعات بیشتر</strong>
     </div>
     <div class="flex justify-start md:justify-center items-center gap-2 w-[15%]">
         
