--- a/src/app/components/not-shared/currency-item-details/chart/chart.component.html
+++ b/src/app/components/not-shared/currency-item-details/chart/chart.component.html
@@ -23,11 +23,11 @@
       </div>
     </div>
   
-    <div class="relative w-full {{ historyData ? 'hidden' : 'flex' }} rounded-lg mb-6 lg:mb-10 z-0 h-75 md:h-94 text-transparent animate-pulse bg-light-border dark:bg-dark-border"></div>
+    <div class="relative w-full {{ historyData ? 'hidden' : 'flex' }} rounded-lg z-0 h-75 md:h-94 text-transparent animate-pulse bg-light-border dark:bg-dark-border"></div>
 
     <div #chartContainer id="chartContainer" class="relative {{ historyData ? 'flex' : 'hidden' }} w-full z-0 h-63 md:h-82 font-iranyekan text-light-text4 dark:text-dark-text4">
       <div class="absolute {{ chartType() === 0 ? 'opacity-0 md:opacity-100' : 'opacity-0' }} left-0 top-0 hidden md:flex flex-col items-start gap-0.5 p-1 z-[2]">
-        <div class="flex items-center gap-2 bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] px-2">
+        <div class="flex items-center gap-2 bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] py-0.5 px-2">
           <span
             class="text-xs font-mono font-medium"
             [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
@@ -62,7 +62,7 @@
         </div>
         <div>
           <span
-            class="text-xs font-medium flex bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] px-2"
+            class="text-xs font-medium flex bg-[#f4f4f4ac] dark:bg-[#1b1b1bac] py-0.5 px-2"
             [ngClass]="isPositive() ? 'text-trade-green' : 'text-trade-red'">
             <p class="text-dark dark:text-light text-xs">حجم تقریبی:&nbsp;</p>{{ volume() }}
           </span>
