--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -19,7 +19,7 @@
             </span>
         </div>
     </div>
-    <div class="flex flex-col justify-center items-center self-start md:self-auto">
+    <div class="flex flex-col justify-center items-end self-start md:self-auto">
         <p class="text-dark-text dark:text-light-text rtl text-xs leading-[180%]">منبع نرخ ها: وبسایت TGJU</p>
         <p class="text-2xs text-dark-text4 dark:text-light-text4 rtl text-xs leading-[180%]">نرخ‌ها صرفاً جهت اطلاع‌رسانی هستند.</p>
     </div>
