Height problem fixed

--- a/src/app/pages/converter/converter.component.html
+++ b/src/app/pages/converter/converter.component.html
@@ -1,4 +1,4 @@
-<main class="min-h-[var(--screen-height)] w-full bg-theme-white dark:bg-theme-black gap-4 flex items-end px-4 pt-20 pb-6 flex-col lg:px-18 lg:pb-8 lg:pt-24 xl:pt-29 xl:px-41 xl:pb-16">
+<main class="min-h-[var(--screen-height-sm)] md:min-h-[var(--screen-height)] w-full bg-theme-white dark:bg-theme-black gap-4 flex items-end px-4 pt-20 pb-6 flex-col lg:px-18 lg:pb-8 lg:pt-24 xl:pt-29 xl:px-41 xl:pb-16">
     <h2 class="text-dark-text dark:text-light-text text-sm md:text-base">مبدل ارز</h2>
     <div class="lg:flex-row-reverse flex-col flex-1 w-full flex gap-4 h-full">
         <div class="flex flex-col border border-light-border dark:border-dark-border bg-light-text dark:bg-dark-text rounded-lg lg:flex-none p-4 flex-1">
