--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="w-6 h-6 cursor-pointer flex justify-center items-center" (click)="changeTheme()">
         <svg
             *ngIf="themeService.getStringTheme() === 'light'"
-            class="fill-dark-text2 dark:fill-light-text2 hover:fill-light-green-text hover:dark:fill-dark-green-text"
+            class="fill-dark-text dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
             version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             viewBox="0 0 81.289 81.289"
             xml:space="preserve">
@@ -18,7 +18,7 @@
 
         <svg
             *ngIf="themeService.getStringTheme() === 'dark'"
-            class="w-6 h-6 fill-dark-text2 dark:fill-light-text2 hover:fill-light-green-text hover:dark:fill-dark-green-text"
+            class="w-6 h-6 fill-dark-text dark:fill-light-text hover:fill-light-green-text hover:dark:fill-dark-green-text"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
         >
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7.11628C9.3028 7.11628 7.11628 9.3028 7.11628 12C7.11628 14.6972 9.3028 16.8837 12 16.8837C14.6972 16.8837 16.8837 14.6972 16.8837 12C16.8837 9.3028 14.6972 7.11628 12 7.11628ZM5.72093 12C5.72093 8.53217 8.53217 5.72093 12 5.72093C15.4678 5.72093 18.2791 8.53217 18.2791 12C18.2791 15.4678 15.4678 18.2791 12 18.2791C8.53217 18.2791 5.72093 15.4678 5.72093 12Z"/>
@@ -40,10 +40,29 @@
         <nav class="md:flex hidden">
             <ol class="flex flex-row-reverse gap-6">
                 <li>
-                    <a class="menu-item-base" routerLink="/">صفحه اصلی</a>
+                    <a class="menu-item-base" routerLink="/">صفحه اصلی
+                        <svg class="home-item-base" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M22 12.2039V13.725C22 17.6258 22 19.5763 20.8284 20.7881C19.6569 22 17.7712 22 14 22H10C6.22876 22 4.34315 22 3.17157 20.7881C2 19.5763 2 17.6258 2 13.725V12.2039C2 9.91549 2 8.77128 2.5192 7.82274C3.0384 6.87421 3.98695 6.28551 5.88403 5.10813L7.88403 3.86687C9.88939 2.62229 10.8921 2 12 2C13.1079 2 14.1106 2.62229 16.116 3.86687L18.116 5.10812C20.0131 6.28551 20.9616 6.87421 21.4808 7.82274" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                            <path d="M15 18H9" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
+                        </svg>
+                    </a>
                 </li>
                 <li>
-                    <a class="menu-item-base" routerLink="/converter">مبدل ارز</a>
+                    
+                    <a class="menu-item-base" routerLink="/converter">مبدل ارز
+                        <svg viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Layer_2" data-name="Layer 2">
+                                <g id="invisible_box" data-name="invisible box">
+                                <rect fill="currentColor"/>
+                                </g>
+                                <g id="Q3_icons" data-name="Q3 icons">
+                                <path fill="currentColor" d="M44,7.1V14a2,2,0,0,1-2,2H35a2,2,0,0,1-2-2.3A2.1,2.1,0,0,1,35.1,12h2.3A18,18,0,0,0,6.1,22.2a2,2,0,0,1-2,1.8h0a2,2,0,0,1-2-2.2A22,22,0,0,1,40,8.9V7a2,2,0,0,1,2.3-2A2.1,2.1,0,0,1,44,7.1Z"/>
+                                <path fill="currentColor" d="M4,40.9V34a2,2,0,0,1,2-2h7a2,2,0,0,1,2,2.3A2.1,2.1,0,0,1,12.9,36H10.6A18,18,0,0,0,41.9,25.8a2,2,0,0,1,2-1.8h0a2,2,0,0,1,2,2.2A22,22,0,0,1,8,39.1V41a2,2,0,0,1-2.3,2A2.1,2.1,0,0,1,4,40.9Z"/>
+                                <path fill="currentColor" d="M24.7,22c-3.5-.7-3.5-1.3-3.5-1.8s.2-.6.5-.9a3.4,3.4,0,0,1,1.8-.4,6.3,6.3,0,0,1,3.3.9,1.8,1.8,0,0,0,2.7-.5,1.9,1.9,0,0,0-.4-2.8A9.1,9.1,0,0,0,26,15.3V13a2,2,0,0,0-4,0v2.2c-3,.5-5,2.5-5,5.2s3.3,4.9,6.5,5.5,3.3,1.3,3.3,1.8-1.1,1.4-2.5,1.4h0a6.7,6.7,0,0,1-4.1-1.3,2,2,0,0,0-2.8.6,1.8,1.8,0,0,0,.3,2.6A10.9,10.9,0,0,0,22,32.8V35a2,2,0,0,0,4,0V32.8a6.3,6.3,0,0,0,3-1.3,4.9,4.9,0,0,0,2-4h0C31,23.8,27.6,22.6,24.7,22Z"/>
+                                </g>
+                            </g>
+                        </svg>
+                    </a>
                 </li>
             </ol>
         </nav>
